# Claude-Code-API-Manager

./: .env.example  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  README.md  pyproject.toml
cli/: main.py
cli/commands/: add.py  delete.py  list.py  use.py  validate.py
constans/: __init__.py  providerModel.py  providerUrl.py  providers.py  settings.py
core/: export_manager.py  key_manager.py  metadata_manager.py  models.py  validators.py
storage/: env_handler.py  metadata_handler.py
ui/: display.py
utils/: crypto.py  helpers.py  shell.py
